"Das Programm wurde überarbeitet, die monatliche Bilanz wurde abgeschlossen, neue Klassen wurden hinzugefügt, die dazu dienen, Kosten zu simulieren."

--- a/InvoiceCreatorApp/InvoiceCreatorApp.csproj
+++ b/InvoiceCreatorApp/InvoiceCreatorApp.csproj
@@ -72,6 +72,8 @@
     </ApplicationDefinition>
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\ExampleExpenseData.cs" />
+    <Compile Include="Models\Expense.cs" />
     <Compile Include="Models\InvoiceData.cs" />
     <Compile Include="Models\InvoiceDocumentCreator.cs" />
     <Compile Include="Models\Invoice.cs" />
